# wave-insight

./: .gitignore  Cargo.toml  front-end-2de00d35d76aa1ca.js  front-end-2de00d35d76aa1ca_bg.wasm  front-end-30eeb8b2e1b16029.js  front-end-30eeb8b2e1b16029_bg.wasm  front-end-5afb4f116eeef095.js  front-end-5afb4f116eeef095_bg.wasm  front-end-657885928bb1188f.js  front-end-657885928bb1188f_bg.wasm  front-end-6cd649e7fdc925f7.js  front-end-6cd649e7fdc925f7_bg.wasm  front-end-7e94fbeffe8b0c67.js  front-end-7e94fbeffe8b0c67_bg.wasm  front-end-8fcd5d81ba6f6785.js  front-end-8fcd5d81ba6f6785_bg.wasm  front-end-9a47e65b4dde9d40.js  front-end-9a47e65b4dde9d40_bg.wasm  front-end-a8a32b9a7772af18.js  front-end-a8a32b9a7772af18_bg.wasm  front-end-aaa60c5aaa8edb8d.js  front-end-aaa60c5aaa8edb8d_bg.wasm  front-end-c08b5782d28fea3e.js  front-end-c08b5782d28fea3e_bg.wasm  front-end-c89d7dd7ff2a2830.js  front-end-c89d7dd7ff2a2830_bg.wasm  front-end-ced008fd7a9157a3.js  front-end-ced008fd7a9157a3_bg.wasm  front-end-d5c67ec4ad568fcf.js  front-end-d5c67ec4ad568fcf_bg.wasm  front-end-d5df27ba8b3fb314.js  front-end-d5df27ba8b3fb314_bg.wasm  front-end-d8e32fc3972c3453.js  front-end-d8e32fc3972c3453_bg.wasm  front-end-dbd97fa99d8ab8bd.js  front-end-dbd97fa99d8ab8bd_bg.wasm  front-end-df2a7ab0045ae3d5.js  front-end-df2a7ab0045ae3d5_bg.wasm  front-end-e85d2567255ad7f.js  front-end-e85d2567255ad7f_bg.wasm  (+34 more)
.github/workflows/: rust.yml  tauri.yml  tauri_pre.yml
back-end/: Cargo.toml
back-end/src/: main.rs
doc/: CNAME
docs/: _config.yml  index.md
docs/_layouts/: default.html
docs/_sass/: jekyll-theme-leap-day.scss  normalize.scss
docs/docs/: index.md
docs/lib/: index.md
front-end/: Cargo.toml  index.html
front-end/src/: app.rs  io.rs  main.rs
front-end/src/code_reader/: code.rs  code_block.rs  mod.rs  mymonaco.rs
front-end/src/file_load/: file.rs  filelist.rs  mod.rs
front-end/src/module_struct/: mod.rs  module.rs  module_component.rs  signal_component.rs
front-end/src/module_struct/signal_struct/: mod.rs  signal.rs  signal_component.rs
front-end/src/top_bar/: bar.rs  mod.rs
front-end/src/wave_show/: ctrl.rs  mod.rs  settings.rs  time.rs  wave.rs
front-end/src/wave_show/signal/: mod.rs  signal_name.rs  signal_show.rs  signal_value.rs
front-end/src/wave_show/util/: mod.rs  signal_things.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: input.vcd
wave-insight-lib/: Cargo.toml
wave-insight-lib/src/: lib.rs
wave-insight-lib/src/data_struct/: code_location.rs  mod.rs  module.rs  module_value.rs  signal.rs  signal_data.rs  value_type.rs
wave-insight-lib/src/parser/: get_word.rs  mod.rs  module_verilog.rs  vcd_parser.rs  verilog_parser.rs  word_parser.rs
wave-insight-lib/src/parser/vcd/: gen_module.rs  mod.rs  parse_action.rs  parse_state.rs  parsing_line.rs  value_change.rs
