[package]
name = "wave-insight"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Junzhuo <zhou@junzhuo.me>"]
description = "A efficient web-based wave viewer API"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wave-insight-lib = "0.1.2"