[package]
name = "front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
yew = "0.19"
wave-insight-lib = { path = "../wave-insight-lib" }
material-yew = { git = "https://github.com/hamza1311/material-yew", features = ["full"], rev = "1bfb89d" }

serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = "0.2.80"
js-sys = "0.3"
gloo-file = "0.2"

num="0.4.0"

[dependencies.web-sys]
version = "0.3"
features = ["File"]

[dependencies.monaco]
version = "0.3.0"
default-features = false
features = ["yew-components"]
git = "https://github.com/siku2/rust-monaco"

[features]
default = ["wasm"]
wasm = []
backend = []
