[package]
name = "wave-insight-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
num="0.4.0"
linked-hash-map="0.5.4"
serde = { version = "1.0", features = ["derive"] }
