[package]
name = "wave-insight-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
num = { version = "0.4.0", features = ["serde"] }
hex = "0.4.2"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
serde = { version = "1.0", features = ["derive"] }
